<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bcalc"
    tools:context=".CalculatorActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/suez_one"
            android:text="@string/app_name_after"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/down_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="55dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/promap"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calc_ac"/>

        <Button
            android:id="@+id/crossFit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/map_ac"/>

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pro_ac"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="6"
        android:layout_margin="35dp"
        android:layout_above="@+id/promap"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/homeFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sing_in"
            android:fontFamily="@font/montserrat1"
            android:text="@string/btnHome"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/fruits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sing_in"
            android:fontFamily="@font/montserrat1"
            android:text="@string/btnFruits"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/vegetables"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sing_in"
            android:fontFamily="@font/montserrat1"
            android:text="@string/btnVegetables"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/fastFood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sing_in"
            android:fontFamily="@font/montserrat1"
            android:text="@string/btnFast"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/drinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sing_in"
            android:fontFamily="@font/montserrat1"
            android:text="@string/btnDrinks"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_sing_in"
            android:fontFamily="@font/montserrat1"
            android:text="@string/btnOther"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>