<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_activ"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/lineText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/suez_one"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="35sp" />



    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineText"
        android:layout_above="@+id/promap"
        android:layout_marginBottom="420dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="45dp"
        android:id="@+id/in_fo">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lineText2"
        android:orientation="vertical"
        android:layout_above="@+id/promap"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/text33"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/suez_one"
            android:text="@string/history"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />



    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/promap"
        android:layout_below="@+id/lineText"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:id="@+id/dataSa">

    </ListView>


    <LinearLayout
        android:id="@+id/promap"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnCalc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calc_ac"/>

        <Button
            android:id="@+id/crossFit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/map_ac"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pro_ac"/>
    </LinearLayout>

</RelativeLayout>